# adverity

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
adverity/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
adverity/migrations/: 0001_initial.py
adverity/pipeline/: __init__.py  adverity_types.py  extract.py  transform.py
adverity/templates/adverity/: fetchhistory_list.html  starwarcollection_detail.html  starwarcollection_list.html
