[tool.poetry]
name = "adverity"
version = "0.1.0"
description = ""
authors = ["Levan Begashvili <life.long.learner127@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.6"
aiohttp = "^3.8.3"
petl = "^1.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
