[tool.poetry]
name = "adverity"
version = "0.1.0"
description = ""
authors = ["Levan Begashvili <life.long.learner127@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.6"
aiohttp = "^3.8.3"
petl = "^1.7.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
flake9 = "^3.8.3.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,"
exclude = "*migrations*"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
